# noc_project

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  NEXT_STEPS.md  README.md
c_model/: CMakeLists.txt  FEATURE_INVENTORY.md  NEXT_STEPS.md  README.md  SUFFICIENCY_FINDINGS.md
c_model/config/: port_params.yaml
c_model/docs/: oss-survey-flit.md  oss-survey-gtest.md  oss-survey-register-file.md
c_model/include/: flit.hpp  ni_spec.hpp  register_file.hpp  request_io.hpp  response_io.hpp  route_parity.hpp
c_model/include/axi/: ATTRIBUTION.md  axi_master.hpp  axi_slave.hpp  memory.hpp  memory_port.hpp  protocol_rules.hpp  scenario_parser.hpp  scoreboard.hpp  types.hpp
c_model/include/cosim/: axi_dpi_adapter.hpp  channel_model_shell_adapter.hpp  channel_model_shell_io.hpp  flit_byte_conv.hpp  loopback_noc_shell_adapter.hpp  loopback_noc_shell_io.hpp  master_shell_adapter.hpp  master_shell_io.hpp  nmu_shell_adapter.hpp  nmu_shell_io.hpp  nsu_shell_adapter.hpp  nsu_shell_io.hpp  perf_collector.hpp  pin_snapshot.hpp  poc_defaults.hpp  router_channel_shell_adapter.hpp  router_channel_shell_io.hpp  router_shell_adapter.hpp  router_shell_io.hpp  slave_shell_adapter.hpp  slave_shell_io.hpp
c_model/include/cosim2/: flit_byte_conv.hpp  loopback_noc_shell_adapter.hpp  loopback_noc_shell_io.hpp  master_shell_adapter.hpp  master_shell_io.hpp  nmu_shell_adapter.hpp  nmu_shell_io.hpp  nsu_shell_adapter.hpp  nsu_shell_io.hpp  poc_defaults.hpp  slave_shell_adapter.hpp  slave_shell_io.hpp
c_model/include/ni/: depacketizer.hpp  flit.hpp  ni_stage.hpp  packetizer.hpp  pipeline_stage.hpp  port_params.hpp  vc_pools.hpp  wormhole_arbiter.hpp  wrong_side.hpp
c_model/include/nmu/: addr_trans.hpp  axi_slave_port.hpp  depacketize.hpp  ni_tokens.hpp  nmu.hpp  nmu_standalone.hpp  packetize.hpp  port_params.hpp  rob.hpp  vc_arb.hpp  vc_arbiter.hpp
c_model/include/noc/: noc_req_in.hpp  noc_req_out.hpp  noc_rsp_in.hpp  noc_rsp_out.hpp  pipeline_stage.hpp  router.hpp  router_adapters.hpp  router_channel.hpp  wormhole_arbiter.hpp
c_model/include/nsu/: axi_master_port.hpp  depacketize.hpp  meta_buffer.hpp  nsu.hpp  nsu_standalone.hpp  packetize.hpp  port_params.hpp  vc_arb.hpp  vc_arbiter.hpp
c_model/include/router/: req_in.hpp  req_out.hpp  router.hpp  router_adapters.hpp  rsp_in.hpp  rsp_out.hpp  wormhole_arbiter.hpp
c_model/include/wrap/: channel_model_wrap.hpp  channel_model_wrap_io.hpp  flit_byte_conv.hpp  flit_bytes.hpp  master_wrap.hpp  master_wrap_io.hpp  nmu_wrap.hpp  nmu_wrap_io.hpp  nsu_wrap.hpp  nsu_wrap_io.hpp  perf_collector.hpp  poc_defaults.hpp  router_wrap.hpp  router_wrap_io.hpp  slave_wrap.hpp  slave_wrap_io.hpp
c_model/src/: register_file.cpp
c_model/tests/: CMakeLists.txt  test_flit.cpp  test_pins_smoke.cpp  test_register_file.cpp
c_model/tests/axi/: CMakeLists.txt  mock_memory_port.hpp  mock_slave.hpp  test_axi_master.cpp  test_axi_master_inject.cpp  test_axi_master_raw_order.cpp  test_axi_slave.cpp  test_integration.cpp  test_memory.cpp  test_protocol_rules.cpp  test_scaffold.cpp  test_scenario_metadata.cpp  test_scoreboard.cpp  test_wire_slave_port.cpp
c_model/tests/common/: CMakeLists.txt  channel_model.hpp  channel_model_params.hpp  component_dwell_observer.hpp  flit_link_probe.hpp  isolated_scenario.hpp  loopback_channel_set.hpp  loopback_depacketizer.hpp  loopback_noc.hpp  loopback_packetizer.hpp  loopback_request_io.hpp  loopback_response_io.hpp  ni_perf_observer.hpp  per_channel_capture.hpp  perf_common.hpp  perf_report.hpp  perf_stats.hpp  router_path.hpp  router_perf_observer.hpp  scenario.hpp  test_axi_master_callbacks.cpp  test_channel_model_per_vc_credit.cpp  test_component_dwell_observer.cpp  test_flit_link_probe.cpp  test_isolated_scenario.cpp  test_logger.hpp  test_loopback_latency.cpp  test_loopback_noc_per_vc_credit.cpp  test_narrow_io.cpp  test_ni_perf_observer.cpp  test_ni_stage.cpp  test_packetize_adapter.hpp  test_perf_collector.cpp  test_perf_phase.cpp  test_perf_report.cpp  test_perf_stats.cpp  test_router_path.cpp  test_router_perf_observer.cpp  test_test_logger.cpp  test_zero_load_calculator.cpp  (+1 more)
c_model/tests/cosim/: CMakeLists.txt  test_axi_dpi_adapter.cpp  test_channel_model_shell_adapter.cpp  test_cmodel_dpi.cpp  test_loopback_noc_shell_adapter.cpp  test_master_shell_adapter.cpp  test_nmu_shell_adapter.cpp  test_nsu_shell_adapter.cpp  test_router_channel_shell_adapter.cpp  test_router_shell_adapter.cpp  test_slave_shell_adapter.cpp
c_model/tests/cosim2/: CMakeLists.txt  test_loopback_noc_shell_adapter.cpp  test_master_shell_adapter.cpp  test_nmu_shell_adapter.cpp  test_nsu_shell_adapter.cpp  test_slave_shell_adapter.cpp
c_model/tests/integration/: CMakeLists.txt  test_perf_probe.cpp  test_port_pair_loopback.cpp  test_request_response_loopback.cpp  test_router_loopback.cpp
c_model/tests/ni/: CMakeLists.txt  test_vc_pools.cpp
c_model/tests/nmu/: CMakeLists.txt  test_addr_trans.cpp  test_axi_slave_port.cpp  test_depacketize.cpp  test_nmu.cpp  test_nmu_credit.cpp  test_nmu_pipeline.cpp  test_nmu_rob_staging.cpp  test_packetize.cpp  test_rob.cpp  test_rob_occupancy.cpp  test_vc_arb.cpp  test_vc_arbiter.cpp
c_model/tests/noc/: CMakeLists.txt  test_pipeline_stage.cpp  test_router.cpp  test_router_adapters.cpp  test_router_channel.cpp  test_router_config_getters.cpp  test_router_front_route.cpp  test_two_node_fabric_at.cpp  test_wormhole_arbiter.cpp  two_node_fabric.hpp
c_model/tests/nsu/: CMakeLists.txt  test_axi_master_port.cpp  test_meta_buffer.cpp  test_nsu.cpp  test_nsu_depacketize.cpp  test_nsu_packetize.cpp  test_nsu_pipeline.cpp  test_nsu_vc_arb.cpp  test_nsu_vc_arbiter.cpp
c_model/tests/router/: CMakeLists.txt  test_pipeline_stage.cpp  test_router.cpp  test_router_adapters.cpp  (+5 more)
cosim/tests/: CMakeLists.txt  test_checker_fires_on_violation.cpp  test_cosim_integration.cpp  test_cosim_wire_smoke.cpp  test_nmu_nsu_axi_conformity.cpp  test_wb2axip_block.cpp  wb2axip_block.hpp
sim/test_patterns/: CMakeLists.txt  README.md  scenario_helpers.hpp
sim/tests/: CMakeLists.txt  test_cosim_integration.cpp
(+564 files in other folders)
